--- a/1/commons/course.sty
+++ b/1/commons/course.sty
@@ -1,5 +1,6 @@
 \usepackage{graphicx}
 \usepackage{float}
+\usepackage{makecell}
 \usepackage[svgnames]{xcolor} 
 \usepackage{fancyhdr}
 \usepackage{tocloft}
@@ -17,6 +18,7 @@
 \usepackage{xepersian}
 \usepackage[T1]{fontenc}
 \usepackage{tikz}
+\usepackage{pgfplots}
 \usepackage[utf8]{inputenc}
 \usepackage{PTSerif} 
 \usepackage{seqsplit}
