Finished the assignment?

--- a/1/questions/4.tex
+++ b/1/questions/4.tex
@@ -101,4 +101,5 @@
     \begin{gather*}
         \frac{3 + 2 + 1 + 4 + 5 + 5 + 4}{10} = 2.4
     \end{gather*}
+    \item می‌توان تعداد کارت گرافیک‌ها یا قدرت آن‌ها را بیشتر کرد.
 \end{enumerate}
