Some more questions Fixed some problems

--- a/2/questions/1.tex
+++ b/2/questions/1.tex
@@ -1,13 +1,19 @@
 \smalltitle{سوال 1}
 از
 \lr{NSPP}
-استفاده می‌کنیم. فرض کنید که در لحظه‌ی
+استفاده می‌کنیم. فرض کنید به مدت
 $T$
-رویداد ذکر شده در سوال رخ می‌دهد. در این صورت داریم:
+ثانیه حالت مذکور در سوال رخ می‌دهد که نرخ ما افزایش می‌یابد. بدون کاستی از مسئله فرض می‌کنیم که این اتفاق
+در زمان 0 تا
+$T$
+می‌افتد و در زمان
+$T$
+تا 10 همان نرخ سابق وجود دارد.
+در این صورت داریم:
 \begin{gather*}
     \lambda(t) = \begin{cases}
-        2 & 0 \le t < T \\
-        3 & T \le t < 10
+        3 & 0 \le t < T \\
+        2 & T \le t < 10
     \end{cases}
 \end{gather*}
 می‌دانیم که داریم
@@ -15,11 +21,11 @@ $\Lambda(t) = \int_{0}^{t} \lambda(s) ds$
 پس نتیجه می‌شود:
 \begin{gather*}
     \Lambda(t) = \begin{cases}
-        \int_{0}^{t} 2 ds = 2t & 0 \le t < T \\
-        \int_{0}^{T} 2 ds + \int_{T}^{t} 3 ds = -T + 3 t & T \le t < 10
+        \int_{0}^{t} 3 ds = 3t & 0 \le t < T \\
+        \int_{0}^{T} 3 ds + \int_{T}^{t} 2 ds = T + 2 t & T \le t < 10
     \end{cases}\\
-    \Lambda(10) = 30 - T\\
-    P(x = 5) = \frac{e^{-(30 - T)} (30 - T)^5}{5!}
+    \Lambda(10) = T + 20\\
+    P(x = 5) = \frac{e^{-(T + 20)} (T + 20)^5}{5!}
 \end{gather*}
 حال به کمک یک انتگرال و احتمال شرطی به ازای مقدایر مختلف
 $T$
@@ -37,7 +43,7 @@ $P(T = t)$
 \end{gather*}
 حال انتگرال مذکور به صورت زیر در می‌آید:
 \begin{gather*}
-    \text{Answer} = \int_{0}^{10} \frac{e^{-(30 - t)} (30 - t)^5}{5!} \times 100 t e^{-10t} dt \approx 2.25 \times 10^{-8}
+    \text{Answer} = \int_{0}^{10} \frac{e^{-(t + 20)} (t + 20)^5}{5!} \times 100 t e^{-10t} dt \approx 0.0000475
 \end{gather*}
 \
 
