--- a/2/questions/2.tex
+++ b/2/questions/2.tex
@@ -1,4 +1,14 @@
 \smalltitle{سوال 2}
-
+ما در این سوال نیاز داریم که
+$P(f < 50)$
+را حساب بکنیم که
+$f$
+متغیر تصادفی زمان خراب شدن است. برای این کار این احتمال را به دو قسمت تقسیم می‌کنیم:
+زمانی که احتمال خرابی بالا است و زمانی که پایین است. بدین جهت داریم:
+\begin{align*}
+    P(f < 50) &= P(f < 5) + P(f < 50 | f > 5) P(f > 5)\\
+    &= (1 - e^{-\frac{10 \times 5}{500}}) + (1 - e^{-\frac{45}{500}}) (e^{-\frac{10 \times 5}{500}})\\
+    &\approx 0.173
+\end{align*}
 
 
