--- a/2/questions/4.tex
+++ b/2/questions/4.tex
@@ -1,5 +1,4 @@
 \smalltitle{سوال 4}
-\\\noindent
 در ابتدا زنجیره را رسم می کنیم:
 \begin{latin}
     \begin{center}
@@ -53,22 +52,27 @@ $\big[\begin{smallmatrix}
 $\big[\begin{smallmatrix}
     0 & 0 & 1
 \end{smallmatrix}\big]$
-می‌شود که نشان می‌دهد که بیمار در زمان بی‌نهایت می‌میرد.
+می‌شود که نشان می‌دهد که بیمار در زمان بی‌نهایت می‌میرد. همچنین می‌توان استدلال کرد که از آنجا که در صورتی که
+در این حالت باشیم با احتمال یک به خودش بر می‌گردیم. پس در نهایت در زمانی که به این حالت برسیم
+دیگر در خودش می‌مانیم و در نهایت با احتمال بزرگتر از یک از هر حالتی که شروع کنیم به این حالت می‌رسیم.
 
-برای زمان متوسط مرگ می‌توان از فرمول زیر استفاده کرد:
-\begin{gather*}
-    \sum_{i=1}^{\infty} i \times \big(\begin{bmatrix}
-        1 & 0 & 0
-    \end{bmatrix} P^i \begin{bmatrix}
-        0 \\ 0 \\ 1
-    \end{bmatrix}\big)
-\end{gather*}
-که به زبان ساده می‌شود احتمال مرگ بیمار بعد از
-$i$
-سیکل ضرب در
-$i$
-به ازای تمامی
-$i$های
-مختلف.
+برای زمان متوسط مرگ می‌توان به صورت زیر عمل کرد:
+\begin{align*}
+    h(q_{NS}) &= 1 + \frac{1}{3} h(q_{NS}) + \frac{1}{3} h(q_{S}) + \frac{1}{3} h(q_{D})\\
+    h(q_{S}) &= 1 + \frac{1}{2} h(q_{S}) + \frac{1}{2} h(q_{D})\\
+    h(q_{D}) &= 0\\
+    \implies\\
+    h(q_{NS}) &= 1 + \frac{1}{3} h(q_{NS}) + \frac{1}{3} h(q_{S})\\
+    h(q_{S}) &= 1 + \frac{1}{2} h(q_{S})\\
+    h(q_{D}) &= 0\\
+    \implies\\
+    h(q_{NS}) &= 1 + \frac{1}{3} h(q_{NS}) + \frac{2}{3}\\
+    h(q_{S}) &= 2\\
+    h(q_{D}) &= 0\\
+    \implies\\
+    h(q_{NS}) &= \frac{5}{2}\\
+    h(q_{S}) &= 2\\
+    h(q_{D}) &= 0
+\end{align*}
 
 
