--- a/2/questions/2.tex
+++ b/2/questions/2.tex
@@ -7,8 +7,8 @@ $f$
 زمانی که احتمال خرابی بالا است و زمانی که پایین است. بدین جهت داریم:
 \begin{align*}
     P(f < 50) &= P(f < 5) + P(f < 50 | f > 5) P(f > 5)\\
-    &= (1 - e^{-\frac{10 \times 5}{500}}) + (1 - e^{-\frac{45}{500}}) (e^{-\frac{10 \times 5}{500}})\\
-    &\approx 0.173
+    &= (1 - e^{-\frac{10 \times 5}{500}}) + ((1 - e^{-\frac{50}{500}}) - (1 - e^{-\frac{5}{500}})) (e^{-\frac{10 \times 5}{500}})\\
+    &\approx 0.172
 \end{align*}
 
 
