--- a/3/questions/1.tex
+++ b/3/questions/1.tex
@@ -13,7 +13,7 @@
     نفر در سیستم باشند (که بافر داخلی پر باشد). به عبارت دیگر داریم:
     \begin{gather*}
         \sum_{i=m+1}^{\infty} P_i = \sum_{i=m+1}^{\infty} (1 - \rho) \rho^n = \sum_{i=m+1}^{\infty} (1 - \frac{\lambda}{\mu}) (\frac{\lambda}{\mu})^n = (1 - \frac{\lambda}{\mu}) \sum_{i=m+1}^{\infty} (\frac{\lambda}{\mu})^n =\\
-        (1 - \frac{\lambda}{\mu}) (\sum_{i=0}^{\infty} (\frac{\lambda}{\mu})^n - \sum_{i=0}^{m} (\frac{\lambda}{\mu})^n) = (1 - \frac{\lambda}{\mu}) (\frac{1}{1 - \frac{\lambda}{\mu}} - \frac{1 - (\frac{\lambda}{\mu})^m}{1 - \frac{\lambda}{\mu}}) = (\frac{\lambda}{\mu})^m
+        (1 - \frac{\lambda}{\mu}) (\sum_{i=0}^{\infty} (\frac{\lambda}{\mu})^n - \sum_{i=0}^{m} (\frac{\lambda}{\mu})^n) = (1 - \frac{\lambda}{\mu}) (\frac{1}{1 - \frac{\lambda}{\mu}} - \frac{1 - (\frac{\lambda}{\mu})^{m+1}}{1 - \frac{\lambda}{\mu}}) = (\frac{\lambda}{\mu})^{m+1}
     \end{gather*}
     \item کافی است که $1 - P_0$ را حساب کنیم.
     \begin{gather*}
