--- a/3/questions/2.tex
+++ b/3/questions/2.tex
@@ -1,2 +1,19 @@
 \section*{سوال 2}
-
+در این سوال
+$\mu = 6$
+است.
+\begin{enumerate}
+    \item \phantom{فاک} \begin{gather*}
+        \rho = \frac{\lambda}{n\mu} = \frac{10}{12} = \frac{5}{6}
+    \end{gather*}
+    \item احتمال اینکه صف خالی باشد برابر است با:
+    \begin{gather*}
+        P_0 = \Bigl(\sum_{n=0}^{2-1} \frac{(\frac{10}{6})^n}{n!} + (\frac{10}{6})^2 \times \frac{1}{2!} \times \frac{2 \times 6}{2 \times 6 - 10}\Bigr)^{-1} = \frac{1}{11}
+    \end{gather*}
+    پس احتمال اینکه حداقل یک نفر در صف باشد برابر است با
+    $1-\frac{1}{11} = \frac{10}{11}$
+    \item از فرمول اسلاید داریم:
+    \begin{gather*}
+        L = 2 \times \frac{5}{6} + \frac{(2 \times \frac{5}{6})^{2+1} \times \frac{1}{11}}{2 \times 2! \times (1 - \frac{5}{6})^2} \approx 5.45
+    \end{gather*}
+\end{enumerate}
