--- a/3/questions/4.tex
+++ b/3/questions/4.tex
@@ -1,1 +1,74 @@
 \section*{سوال 4}
+\begin{enumerate}
+    \item به صورت کلی فرمول این الگوریتم به صورت زیر است:
+    \begin{gather*}
+        X_{i + 1} = (aX_i + c) \mod m
+    \end{gather*}
+    که در این فرمول
+    $a$ \lr{the multiplier}،
+    $c$ \lr{the increment}
+    و
+    $m$ \lr{the modulus}
+    نام دارد. در این الگوریتم ابتدا باید
+    $X_0$
+    یا همان
+    \lr{seed}
+    را مشخص کنیم. این عدد به عنوان اولین عدد دنباله‌ی اعداد تصادفی ما استفاده می‌شود. سپس به صورت بازگشتی
+    اعداد دنباله را می‌توان پیدا کرد. همچنین اعداد تولید شده در بازه‌ی
+    $[0, m)$
+    هستند.
+    \item صرفا دنباله‌ای از اعدادی که با $\text{seed} = X_0$ تولید می‌شوند یک
+    \lr{random-number stream}
+    می‌گویند. دقت کنید که هر
+    \lr{stream}
+    یک دوره دارد.
+    \item دو حالت در نظر می‌گیریم. یکی در حالتی که
+    $c = 0$
+    است و دیگری در حالتی که
+    $c \neq 0$
+    است. در حالتی که $c = 0$ است، اگر
+    $m$
+    عدد اول باشد، آنگاه طبق قضیه‌ی فرما
+    $a^{m-1} - 1 \equiv 0 \mod m$ است.
+    پس دوره تناوب برابر
+    $m - 1$
+    است. حال اگر
+    $m$
+    توانی از 2 باشد و
+    $X_0$
+    فرد باشد، آنگاه دوره تناوب برابر
+    $m/4$
+    است به شرطی که
+    $a$
+    را به توان به یکی از دو فرم
+    $3 + 8k$ یا $5 + 8k$
+    نوشت به طوری که
+    $k \in \mathbb{I}$
+    باشد.
+
+    از طرفی دیگر اگر
+    $c \neq 0$
+    باشد، به شرطی که
+    $c$
+    نسبت به
+    $m$
+    اول باشد و
+    $a$
+    را به توان به فرم
+    $1 + 4k \quad k \in \mathbb{I}$
+    نوشت و
+    $m$
+    توانی از دو باشد آنگاه دوره تناوب ما برابر
+    $m$
+    است.
+    \item مزایا: \begin{itemize}
+        \item سرعت بالا
+        \item مموری پایین
+        \item پیاده سازی راحت
+    \end{itemize}
+    معیاب: \begin{itemize}
+        \item در صورتی که مقادیر $a$ و $c$ را بد انتخاب کنیم دور تناوب کم یا اعداد تصادفی بی کیفیتی می‌گیریم.
+        \item امن نیست چرا که با داشتن چندین عدد در دنباله می‌توان الگوی دنباله را کشف کرد.
+        \item به صورت کلی اعداد تولید شده کیفیت خوبی ندارند.
+    \end{itemize}
+\end{enumerate}
