--- a/4/questions/2.tex
+++ b/4/questions/2.tex
@@ -1,2 +1,29 @@
 \section*{سوال 2}
-
+\begin{enumerate}
+    \item \lr{PMF} تابع را بدست می‌آوریم:
+    \begin{gather*}
+        f(x) = \begin{cases}
+            \frac{50}{50 + 30 + 20 + 10} = \frac{5}{11} & x = 1\\
+            \frac{30}{50 + 30 + 20 + 10} = \frac{3}{11} & x = 2\\
+            \frac{20}{50 + 30 + 20 + 10} = \frac{2}{11} & x = 3\\
+            \frac{10}{50 + 30 + 20 + 10} = \frac{1}{11} & x = 4
+        \end{cases}
+    \end{gather*}
+    \item تابع به صورت زیر تعریف می‌شود:
+    \begin{gather*}
+        F^{-1}(x) = \begin{cases}
+            1 & 0 \le x < \frac{5}{11}\\
+            2 & \frac{5}{11} \le x < \frac{5}{11} + \frac{3}{11} = \frac{8}{11}\\
+            3 & \frac{8}{11} \le x < \frac{8}{11} + \frac{2}{11} = \frac{10}{11}\\
+            4 & \frac{10}{11} \le x \le 1\\
+        \end{cases}
+    \end{gather*}
+    پس برای هر عدد داریم:
+    \begin{align*}
+        0.3 &\rightarrow 1\\
+        0.45 &\rightarrow 1\\
+        0.6 &\rightarrow 2\\
+        0.8 &\rightarrow 3\\
+        0.95 &\rightarrow 4
+    \end{align*}
+\end{enumerate}
