--- a/4/questions/4.tex
+++ b/4/questions/4.tex
@@ -1,1 +1,35 @@
 \section*{سوال 4}
+اعداد را مرتب می‌کنیم و جدول زیر را تشکیل می‌دهیم:
+\begin{latin}
+\centering
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|}
+    \hline
+    $R_i$ & 0.02 & 0.09 & 0.15 & 0.25 & 0.31 & 0.43 & 0.6 & 0.8 & 0.85 & 0.95\\
+    \hline
+    $\frac{i}{N}$ & 0.1 & 0.2 & 0.3 & 0.4 & 0.5 & 0.6 & 0.7 & 0.8 & 0.9 & 1\\
+    \hline
+    $\frac{i}{N} - R_i$ & 0.08 & 0.11 & 0.15 & 0.15 & 0.19 & 0.17 & 0.1 & 0 & 0.05 & 0.05\\
+    \hline
+    $\frac{i-1}{N}$ & 0 & 0.1 & 0.2 & 0.3 & 0.4 & 0.5 & 0.6 & 0.7 & 0.8 & 0.9\\
+    \hline
+    $R_i - \frac{i - 1}{N}$ & 0.02 & - & - & - & - & - & 0 & 0.1 & 0.05 & 0.05\\
+    \hline
+\end{tabular}
+\end{latin}
+حال داریم:
+\begin{gather*}
+    D^+ = \max\left(\frac{i}{N}-R_i\right) = 0.19\\
+    D^- = \max\left(R_i - \frac{i}{N}\right) = 0.1\\
+    D = \max\left(0.19, 0.1\right) = 0.19
+\end{gather*}
+حال با توجه به جدول داخل اسلاید 6، ستون
+$D_{0.05}$
+و ردیف
+\lr{degree of freedom = 10}
+عدد داخل ان نوشته شده برابر
+$0.41$
+است. از آنجا که
+$D < 0.41$
+است نمی‌توان
+\lr{null hypothesis}
+را رد کرد و می‌گوییم که اعداد یونیفرم هستند.
