--- a/4/questions/6.tex
+++ b/4/questions/6.tex
@@ -1,1 +1,5 @@
 \section*{سوال 6}
+\begin{itemize}
+    \item \lr{\textbf{Weibull}}: در رشته‌ی برق و شبیه سازی بازه‌هایی که \lr{overvoltage} رخ می‌دهد کاربرد دارد و همچنین بر روی حدس زدن زمانی که یک چاه نفت تمام می‌شود کاربرد دارد.
+    \item \lr{\textbf{Log-normal}}: تعداد کامنت‌های یک شبکه‌ی اجتماعی و ترافیک اینترنت از این توزیع پیروی می‌کنند.
+\end{itemize}
