--- a/4/questions/3.tex
+++ b/4/questions/3.tex
@@ -1,1 +1,7 @@
 \section*{سوال 3}
+مانند
+\link{https://faculty.ksu.edu.sa/sites/default/files/or441-lec09-_generating_random_numbers-convol-accept-reject-_sep_2017.pdf}{این اسلاید}
+عمل می‌کنیم. در ابتدا باید پیدا کنیم که حداکثر
+\lr{PDF negative binomial distribution}
+چه قدر است. عملا
+$\max\left({x + 3 - 1\choose x} (1 - 0.6)^x 0.6^3 \right) = \max\left({x + 2\choose x} 0.4^x 0.6^3 \right)$
