--- a/4/questions/1.tex
+++ b/4/questions/1.tex
@@ -9,7 +9,7 @@ $x < -2$
 برابر ۰ است. برای بازه‌ی
 $-2 < x < 0$
 نیز داریم با انتگرال گیری داریم:
-$\int \frac{3}{16}x^2 = \frac{x^3}{16}$.
+$\int^{t}_{-2} \frac{3}{16}x^2 = \frac{t^3}{16} + \frac{1}{2}$.
 برای بازه‌ی اعداد مثبت نیز داریم که مساحت زیر نمودار
 \lr{PDF}
 برابر است با
@@ -18,16 +18,16 @@ $\int e^{-2x} = -\frac{1}{2} e^{-2x}$.
 \begin{gather*}
     F_X(x) = \begin{cases}
         0  & x < -2 \\
-        \frac{x^3}{16} & -2 \le x \le 0\\
-        \frac{2^3}{16} - \frac{1}{2} e^{-2x} & x > 0
+        \frac{x^3}{16} + \frac{1}{2} & -2 \le x \le 0\\
+        \frac{1}{2} - \frac{1}{2} e^{-2x} & x > 0
       \end{cases}
 \end{gather*}
 حال معادله‌ی $F(F^{-1}(u)) = u$ را حل می‌کنیم.
 معادله باید به دو قسمت
-$0 < u < \frac{2^3}{16} = \frac{1}{2}$ و $\frac{1}{2} < u < 1$
+$0 < u < \frac{1}{2}$ و $\frac{1}{2} < u < 1$
 تقسیم کنیم. برای قسمت اول داریم:
 \begin{gather*}
-    F(F^{-1}(u)) = \frac{F^{-1}(u)^3}{16} = u \implies F^{-1}(u) = \sqrt[3]{\frac{16u}{3}}
+    F(F^{-1}(u)) = \frac{F^{-1}(u)^3}{16} + \frac{1}{2} = u \implies F^{-1}(u) = \sqrt[3]{16u - 8}
 \end{gather*}
 برای قسمت دوم نیز داریم:
 \begin{gather*}
@@ -37,7 +37,7 @@ $0 < u < \frac{2^3}{16} = \frac{1}{2}$ و $\frac{1}{2} < u < 1$
 در نهایت پس می‌شود:
 \begin{gather*}
     F^{-1}(x) = \begin{cases}
-        \sqrt[3]{\frac{16u}{3}} & 0 < x < 0.5\\
+        \sqrt[3]{16u - 8} & 0 < x < 0.5\\
         \frac{\ln(1 - 2u)}{-2} & 0.5 < x < 1
       \end{cases}
 \end{gather*}
