--- a/4/questions/3.tex
+++ b/4/questions/3.tex
@@ -1,7 +1,33 @@
 \section*{سوال 3}
-مانند
-\link{https://faculty.ksu.edu.sa/sites/default/files/or441-lec09-_generating_random_numbers-convol-accept-reject-_sep_2017.pdf}{این اسلاید}
-عمل می‌کنیم. در ابتدا باید پیدا کنیم که حداکثر
-\lr{PDF negative binomial distribution}
-چه قدر است. عملا
-$\max\left({x + 3 - 1\choose x} (1 - 0.6)^x 0.6^3 \right) = \max\left({x + 2\choose x} 0.4^x 0.6^3 \right)$
+در ابتدا بررسی می‌کنیم که این توزیع دقیقا چیست. این توزیع به ما می‌گوید که اگر یک رویداد داشته باشیم که
+احتمال موفقیت در آن
+$p$
+باشد چند بار آزمایش شکست می‌خورد تا اینکه
+$k$
+بار موفقیت آمیز باشد. به همین منظور آزمایش را بدین صورت بیان می‌کنیم:
+اعداد تصادفی بین ۰ تا ۱ تولید می‌کنیم و می‌شماریم که چند بار شسکت خورده‌ایم. زمانی که
+$k$
+تا موفقیت دیدیم،‌ تعداد شکست‌ها عدد مورد نظر ما خواهد بود. زمانی که به تعداد
+$k$
+موفقیت هم می‌رسیم شمارنده را ریست می‌کنیم.
+
+پس به عنوان مثال در اعداد داده شده شروع می‌کنیم و جدول زیر را تشکیل می‌دهیم:
+\begin{latin}
+    \centering
+    \begin{tabular}{|c|c|c|}
+        \hline
+        RNG & Fail & Win\\
+        \hline
+        0.81 & 1 & 0\\
+        0.65 & 2 & 0\\
+        0.72 & 3 & 0\\
+        0.95 & 4 & 0\\
+        0.2 & 4 & 1\\
+        0.86 & 5 & 1\\
+        0.4 & 5 & 2\\
+        0.75 & 6 & 2\\
+        0.35 & 6 & 3\\
+        \hline
+    \end{tabular}
+\end{latin}
+عدد تولید شده ۶ است.
