--- a/Hometask/HW.tex
+++ b/Hometask/HW.tex
@@ -99,5 +99,22 @@
 مشاهده می‌شود که تمامی جواب‌ها یکسان شد!
 
 \section{}
+دلیل این موضوع این است که جمع احتمالاتی که از یک یال راس خارج می‌شوند عملا باید برابر با یک باشد
+که بالاخره بعد از آن
+\lr{tansit}
+جایی برویم.
+
+\section{}
+
+\section{}
+از آنجایی که
+$\rho$ همان \lr{utilization}
+است، پس
+$1 - \rho$
+می‌شود احتمال خالی یا بیکار بودن سیستم. احتمال اضافه شدن فرد دیگری به سیستم بدون رفتن بیرون کسی دیگری
+نیز برابر
+$rho$
+است. پس در نهایت داریم:
+$P_n = (1 - \rho) \rho^n$
 
 \end{document}
